# jiebaRS

./: .Rbuildignore  .gitignore  DESCRIPTION  LICENSE  LICENSE.md  NAMESPACE  NEWS.md  README.Rmd  README.md  README_en.Rmd  README_en.md  _pkgdown.yml  cran-comments.md  justfile
.github/workflows/: R-CMD-check.yml  code-quality-check.yml  pkgdown.yml  r-universe-test.yml
R/: extendr-wrappers.R  filter.R  freq.R  get-idf.R  helper.R  keywords.R  ngrams.R  print.R  segment.R  tagging.R  textrank.R  tobin.R  user-dict.R  worker.R
examples/weicheng/: compare-mix.R  weicheng.txt
inst/: WORDLIST
man/: add_user_words.Rd  count_ngrams.Rd  filter_segment.Rd  freq.Rd  get_idf.Rd  get_tuple.Rd  keywords.Rd  keywords_df.Rd  keywords_worker.Rd  new_user_word.Rd  new_worker.Rd  segment.Rd  segment_batch.Rd  segment_batch_worker.Rd  segment_worker.Rd  tagging.Rd  tagging_batch.Rd  tagging_batch_worker.Rd  tagging_df.Rd  tagging_worker.Rd  textrank.Rd  textrank_df.Rd  textrank_worker.Rd  tobin.Rd  tobin_rs.Rd  worker.Rd
pkgdown/: extra.scss
src/: Makevars.in  Makevars.win.in  entrypoint.c  jiebaRS-win.def
src/rust/: Cargo.toml  document.rs
src/rust/src/: file_reader.rs  keywords.rs  lib.rs  segment.rs  tag.rs  user_dict.rs  worker.rs
tests/: testthat.R
tests/testthat/: test-filter-segment.R  test-freq.R  test-get-idf.R  test-helper.R  test-keywords.R  test-new-user-word.R  test-ngrams.R  test-segment.R  test-stopword.R  test-tagging.R  test-textrank.R  test-tobin.R  test-user-word.R  test-worker-segment.R  test-worker.R
tools/: config.R
(+16 files in other folders)
