[package]
name = 'jieba_rs'
publish = false
version = '0.1.0'
edition = '2021'
rust-version = '1.65'

[lib]
crate-type = ['staticlib']
name = 'jieba_rs'

[dependencies]
extendr-api = '0.8.1'
jieba-rs = { version = "0.8.1", features = ["tfidf"] }
rayon = "1.11"

[lints.rust]
warnings = "deny"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
strip = true
