[package]
name = 'jieba_rs'
publish = false
version = '0.1.0'
edition = '2021'
rust-version = '1.65'

[lib]
crate-type = ['staticlib']
name = 'jieba_rs'

[dependencies]
ahash = "0.8"
extendr-api = '0.9'
jieba-rs = { version = "0.10", features = ["tfidf", "textrank"] }
rayon = "1.12"

[lints.rust]
warnings = "deny"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
strip = true
